--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,25 @@
+
+
+.card {
+    width: 800px;
+    background-color: aliceblue;
+    margin: auto;
+
+}
+
 h1 {
-    background-color: blue;
-    color: aliceblue;
+    width: 700px;
+    background-color: rgb(79, 79, 224);
+    color: gray;
     font-size: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    margin: auto;
 }
 
 .recipe {
     font-size: 20px;
-    background-color: antiquewhite;
+    background-color: aqua;
+    margin: 10px;
+    padding: auto;
 }
